lab2/test_files/syntax_errors/illegal_if_in_if_condition.java
public class Factorial{
    public static void main(String[] a){
        System.out.println(new Element().Init());
    }
}

class Element {
    public boolean Init(){
        int test;
        test = v_Age ;  
        if(if(true)){
        }
    }
}
